# comics

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  deny.toml  go.mod  go.sum  main.go  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  docker.yaml  workflow.yaml
docs/superpowers/plans/: 2026-06-14-e2e-playwright-bdd.md
docs/superpowers/specs/: 2026-06-14-e2e-playwright-bdd-design.md  2026-06-14-web-login-auth-design.md
e2e/: .gitignore  jsconfig.json  package-lock.json  package.json  playwright.config.js  screenshots.spec.js
e2e/features/: library.feature  login.feature  reader.feature
e2e/pages/: library.page.js  login.page.js  reader.page.js
e2e/steps/: fixtures.js  library.steps.js  login.steps.js  reader.steps.js
features/: 000_initial.feature
fixtures/: ATTRIBUTION.md
fixtures/data/: ATTRIBUTION.md
src/: assets.rs  csrf.rs  error.rs  helpers.rs  lib.rs  main.rs  state.rs
src/auth/: config.rs  middleware.rs  mod.rs
src/handlers/: book.rs  health.rs  index.rs  login.rs  mod.rs  page.rs  rescan.rs  shuffle.rs  thumb.rs
src/models/: book.rs  ids.rs  mod.rs  scan.rs
templates/: book.html  index.html  login.html
tests/: comics.rs  integration_test.rs
version/: version.go
