[package]
name = "comics"
version = "0.0.0-dev"
edition = "2024"
authors = ["henry40408 <2316687+henry40408@users.noreply.github.com>"]
description = "Simple file server for comic books"
build = "build.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
axum = "0.8.9"
bcrypt = "0.19.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
cookie = { version = "0.18.1", default-features = false, features = ["signed", "percent-encode"] }
http = "1.4.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
mimalloc = "0.1"
parking_lot = "0.12.1"
rand = "0.10.0"
rayon = "1.12.0"
rpassword = "7.5.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

[dev-dependencies]
axum-test = "21.0.0"
snapbox = { version = "1.2.2", features = ["cmd"] }
tempfile = "3.26.0"
time = "0.3.47"                                      # Force upgrade to fix security audit

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# Self-maintained lint set (originally seeded from Embark Studios' rust-ecosystem
# list). The bulk of the old itemised pedantic lints are now covered by the
# `pedantic` group; only the noisy/low-signal ones are opted back out, plus the
# restriction and nursery lints that have no safe umbrella group.
[lints.rust]
unexpected_cfgs = "deny"
unsafe_code = "deny"

[lints.clippy]
# Groups (priority -1 so the individual entries below win).
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Opt out of the noisy / low-signal pedantic lints.
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
duration_suboptimal_units = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"

# Restriction lints (no safe umbrella group — kept itemised).
dbg_macro = "warn"
exit = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
todo = "warn"
unimplemented = "warn"
verbose_file_reads = "warn"

# Nursery picks (the nursery group as a whole is too unstable to enable).
debug_assert_with_mut_call = "warn"
fallible_impl_from = "warn"
trait_duplication_in_bounds = "warn"
